2004-10-19  Derek Scherger  <derek@echologic.com>

	* tests/t_drop_missing.at: New test.
	* testsuite.at: Call it.

2004-10-18  Derek Scherger  <derek@echologic.com>

	* tests/t_add.at: New test.
	* testsuite.at: Call it.

2004-10-12  graydon hoare  <graydon@pobox.com>

	* unix/read_password.cc: Don't force echo on.

2004-09-01  Derek Scherger  <derek@echologic.com>

	* lua.{cc,hh} (hook_ignore_branch): new hook
	* commands.cc (ls_branches): call it
	* monotone.texi (Hook Reference): describe it

2004-09-02  Richard Levitte  <richard@levitte.org>

	fix bug 8715 and more
	* diff_patch.cc (struct unidiff_hunk_writer,
	unidiff_hunk_writer::flush_hunk): the skew is not just the
	size difference between added and deleted lines in the current
	hunk, it's the size difference between /all/ added and deleted
	lines so far.  Therefore, the skew needs to be a member of the
	struct rather than being something calculated for each hunk.
	Furthermore, we need to add trailing context even if the change
	only consisted of one line.

2004-08-17  Richard Levitte  <richard@levitte.org>

	* monotone.texi (Working Copy): Change the description of
	'monotone revert' to explain what happens when there are
	arguments.

2004-08-16  Richard Levitte  <richard@levitte.org>

	* monotone.texi (OPTIONS): Add a description of --ticker.

	* ui.cc, ui.hh: Rethink the writing conditions as the ticks being
	"dirty" when they have changed since the last print.  That way,
	it's very easy to see when they need being printed.  This fixes a
	small bug where, in some cases, the exact same tick output is
	produced twice, once before a separate message, and once after,
	when a ticker is actually being removed.
	(tick_write_dot::write_ticks): Add a line that describes the
	ticks, including the amount of each tick per short name.

2004-08-15  Richard Levitte  <richard@levitte.org>

	fix bug 8733
	* ui.cc, ui.hh: Define a separate tick writer struct, and two