@@ -34,7 +34,6 @@ AT_CHECK(MONOTONE update, [], [ignore], [ignore])
 AT_CHECK(grep bar MT/manifest, [0], [ignore], [ignore])
 AT_CHECK(grep bleh MT/manifest, [0], [ignore], [ignore])
 AT_CHECK(grep foo MT/manifest, [1], [ignore], [ignore])
-AT_CHECK(rm bar)
 
 # rename a rename target
 AT_CHECK(MONOTONE rename bleh blah, [], [ignore], [ignore])
@@ -48,6 +47,22 @@ AT_CHECK(grep blyh MT/work, [0], [ignore], [ignore])
 # undo a rename
 AT_CHECK(MONOTONE rename blyh bleh, [], [ignore], [ignore])
 AT_CHECK(test -f MT/work, [1], [ignore], [ignore])
+
+# move file before renaming it
+AT_CHECK(MONOTONE status, [], [ignore], [ignore])
+AT_CHECK(mv bar barfoo)
+AT_CHECK(MONOTONE rename bar barfoo, [], [ignore], [stderr])
+AT_CHECK(grep 'adding bar -> barfoo to working copy rename set' stderr, [0], [ignore])
+AT_CHECK(MONOTONE status, [], [ignore], [ignore])
+
+# move file to wrong place before renaming it
+AT_CHECK(mv barfoo bar)
+AT_CHECK(MONOTONE revert, [], [ignore], [ignore])
+AT_CHECK(MONOTONE status, [], [ignore], [ignore])
+AT_CHECK(mv bar barfoofoo)
+AT_CHECK(MONOTONE rename bar barfoo, [], [ignore], [stderr])
+AT_CHECK(grep 'adding bar -> barfoo to working copy rename set' stderr, [0], [ignore])
+AT_CHECK(MONOTONE status, [1], [ignore], [ignore])
 
 AT_CLEANUP
 
